tests/diagnostics/negative/unknown_identifier.must
error[SEMA_E_UNKNOWN_IDENTIFIER] symbol_resolution: unknown identifier
missing_negative_symbol
name not found in this scope
help: declare the missing identifier in scope or import the module that exports it
